# prettyosys

./: .gitignore  CHANGELOG.md  README.md  prettyosys.cabal  shell.nix
app/: Cli.hs  FolderSearch.hs  Main.hs  Sby.hs  SearchVHDLFiles.hs  Verify.hs
app/Cli/: InitArgs.hs  RTLArgs.hs  RunApp.hs  Utils.hs  VerifyArgs.hs
app/Init/: Init.hs
app/Parsers/: PSL.hs  SbyLog.hs  TextParser.hs
app/Parsers/FileExtensions/: Base.hs  PSL.hs  VHDL.hs  VU.hs
app/Parsers/SbyLog/: SbyCommand.hs  SbyLog.hs  SbyLogUtils.hs  SolverLog.hs  Utils.hs
app/Parsers/SbyLog/LogType/: LogType.hs
app/Parsers/SbyLog/LogType/SolverLog/: Basecase.hs  Cover.hs  Induction.hs  SolverLog.hs
app/Parsers/SbyLog/SolverLog/: Basecase.hs  Cover.hs  Induction.hs  SolverLog.hs  Utils.hs
app/Parsers/VHDL/: Extension.hs
app/RTL/: RTL.hs
app/Settings/: Settings.hs
app/Utils/: FileExtensionSearch.hs  FileSearch.hs  FolderSearch.hs
app/Utils/Parsers/: PSL.hs  SbyLog.hs  TextParser.hs
app/Verify/: Assertion.hs  Commands.hs  CoverPoint.hs  Error.hs  Sby.hs  SbyCommand.hs  SbyConfigFile.hs  Verify.hs
app/Verify/SbyConfigFile/: GetSbyConfigFiles.hs  SbyConfigFile.hs
app/Verify/Types/: Assertion.hs  CoverPoint.hs  Error.hs  Utils.hs
app/Verify/View/: AssertionTable.hs  CoverTable.hs  Utils.hs
app/View/: AssertionTable.hs  CoverTable.hs  Utils.hs
tests/: ParserTests.hs  SettingsTests.hs  Spec.hs  Test.hs
