cabal-version:      2.4
name:               prettyosys
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             rlou
maintainer:         rennelou@outlook.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable prettyosys
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Cli.RunApp,
                   Cli.VerifyArgs,
                   Verify.Verify,
                   Verify.SbyCommand,
                   Verify.SbyConfigFile.SbyConfigFile,
                   Verify.SbyConfigFile.GetSbyConfigFiles,
                   Verify.CoverPoint,
                   Verify.Assertion,
                   Verify.Error,
                   View.CoverTable,
                   View.AssertionTable,
                   View.Utils,
                   Parsers.TextParser,
                   Parsers.PSL,
                   Parsers.FileExtensions.Base,
                   Parsers.FileExtensions.VHDL,
                   Parsers.FileExtensions.PSL,
                   Parsers.SbyLog.SbyLog,
                   Parsers.SbyLog.Utils,
                   Parsers.SbyLog.LogType.LogType,
                   Parsers.SbyLog.LogType.SolverLog.SolverLog,
                   Parsers.SbyLog.LogType.SolverLog.Cover,
                   Parsers.SbyLog.LogType.SolverLog.Basecase,
                   Parsers.SbyLog.LogType.SolverLog.Induction,
                   Utils.FolderSearch

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      directory ^>=1.3.6.0,
                      filepath ^>=1.4.2.1,
                      text ^>=1.2.4.1,
                      typed-process,
                      bytestring ^>=0.10.12.0,
                      stm ^>=2.5.0.1,
                      optparse-applicative,
                      megaparsec,
                      table-layout ^>= 0.9.1.0
    
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
